--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -98,3 +98,41 @@ a.resaltado {
 img.oculta {
   display: none !important;
 }
+
+
+
+
+/* BOTONES DE AJUSTES/ACCESIBILIDAD */
+
+
+#ajustesBtn {
+  background: #333;
+  color: #fff;
+  border: none;
+  padding: .6em 1.2em;
+  border-radius: .5em;
+  cursor: pointer;
+  font-size: 1.1em;
+  margin: 0 1em;
+  transition: background .2s;
+}
+
+#ajustesBtn:hover, #ajustesBtn:focus {
+  background: #005f73;
+}
+
+#accesibilidad.oculto {
+  display: none;
+}
+
+#accesibilidad {
+  background: #f2f2f2;
+  border-radius: 0.7em;
+  margin-top: 1em;
+  padding: 1em .5em;
+  box-shadow: 0 2px 6px #0001;
+  justify-content: center;
+  gap: .5em;
+  display: flex;
+  flex-wrap: wrap;
+}
