--- a/css/accesibilidad.css
+++ b/css/accesibilidad.css
@@ -1,17 +1,21 @@
 #ajustes-container {
   display: inline-block;
   position: relative;
+  margin: 1.5em 0 1.5em 1em;
 }
 
 #ajustesBtn {
   background: #333;
   color: #fff;
   border: none;
-  padding: .6em 1.2em;
-  border-radius: .5em;
+  padding: .6em 1.4em;
+  border-radius: .6em;
   cursor: pointer;
-  font-size: 1.1em;
-  margin: 0 1em;
+  font-size: 1.2em;
+  font-family: inherit;
+  font-weight: bold;
+  letter-spacing: 1px;
+  box-shadow: 0 2px 8px #0003;
   transition: background .2s;
 }
 
@@ -19,7 +23,7 @@
   background: #005f73;
 }
 
-/* Menú de accesibilidad tipo popup */
+/* Menú emergente de ajustes */
 #accesibilidad {
   display: flex;
   flex-direction: row;
@@ -34,7 +38,7 @@
   top: 120%;
   left: 50%;
   transform: translateX(-50%);
-  min-width: 270px;
+  min-width: 290px;
   justify-content: center;
   opacity: 1;
   visibility: visible;
@@ -57,13 +61,13 @@
   font-size: 1em;
   margin: 2px 0;
   transition: background .2s;
+  font-family: inherit;
 }
 #accesibilidad button:hover, #accesibilidad button:focus {
   background: #1d3557;
 }
 
-/* ... y también las clases especiales: daltonico, cursor-grande, resaltado, img.oculta ... */
-
+/* Clases para accesibilidad */
 .daltonico {
   --bg-color: #ffefd5;
   --text-color: #005f73;
